force-app/main/default/objects/PDRI__Managed_Field__c/fields/PDRI__Deploy_After_Relationship2__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deploy_After_Relationship2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deploy After Relationship</label>
    <referenceTo>PDRI__Managed_Relationship__c</referenceTo>
    <relationshipLabel>Managed Fields</relationshipLabel>
    <relationshipName>Deploy_After_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>