force-app/main/default/objects/PDRI__Managed_Field__c/fields/PDRI__Deploy_After_Relationship__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deploy_After_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATED</label>
    <referenceTo>PDRI__Relationship__c</referenceTo>
    <relationshipLabel>Managed Fields</relationshipLabel>
    <relationshipName>Deploy_After_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>