force-app/main/default/objects/PDRI__Managed_Field__c/fields/PDRI__Managed_Object__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Managed_Object__c</fullName>
    <label>Managed Object</label>
    <referenceTo>PDRI__Managed_Object__c</referenceTo>
    <relationshipLabel>Managed Fields</relationshipLabel>
    <relationshipName>Managed_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>