force-app/main/default/objects/PDRI__Managed_Field__c/fields/PDRI__Temporary_Insert_Value__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Temporary_Insert_Value__c</fullName>
    <label>Temporary Insert Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>